--- a/src/Start.css
+++ b/src/Start.css
@@ -1,6 +1,6 @@
 @import "https://codepen.io/DXC/pen/6e5e17a21aa0f1f0df762d0c800aee8b.css";
-
-/* body {
+/* 
+body {
 	background-color: #b706ed;
 	margin: 0;
 } */
