--- a/src/Gamepage.css
+++ b/src/Gamepage.css
@@ -223,7 +223,7 @@ body {
 .hand-r:after {
     position: absolute;
     content: "";
-    background-color: #e62c1b;
+    background-color: #000000;
     height: 5.44px;
     width: 28px;
     border-radius: 12.96px;
@@ -267,7 +267,7 @@ body {
 .leg-r:after {
   position: absolute;
   content: "";
-  background-color: #e62c1b;
+  background-color: #000000;
   width: 44.96px;
   height: 4.96px;
   border-radius: 16px;
@@ -280,7 +280,7 @@ body {
     background-color: transparent;
     height: 40px;
     width: 100px;
-    border: 9.92px solid #ab3cf0;
+    border: 9.92px solid #81359f;
     border-top: none;
     border-radius: 0 0 60px 29.92px;
     left: 44.96px;
@@ -293,11 +293,11 @@ body {
     background-color: transparent;
     height: 40px;
     width: 44.96px;
-    border: 9.92px solid #ab3cf0;
+    border: 9.92px solid #81359f;
     border-left: none;
     border-bottom: none;
     top: -49.6px;
-    left: 54.72px;
+    left: 36px;
     border-radius: 0 40px 0 0;
 }
 
@@ -314,7 +314,7 @@ body {
 
 @font-face {
     font-family: 'ButtonFont';
-    src: url('/Users/armaan/Desktop/test/src/fonts/siller.otf') format('truetype');
+    src: url('/Users/nicolettethiro/git/test/src/fonts/siller.otf') format('truetype');
   }
   
 
