--- a/src/Start.css
+++ b/src/Start.css
@@ -18,7 +18,7 @@ body {
     border-radius: 50px;
     background-color: #29103e;
     color: #fff;
-    padding: 30px 60px;
+    padding: 20px 30px;
     cursor: pointer;
     border: none;
     position: absolute;
@@ -34,5 +34,89 @@ body {
 }
 @font-face {
     font-family: 'ButtonFont';
-    src: url('/Users/armaan/Desktop/test/src/fonts/siller.otf') format('truetype');
+    src: url('/Users/nicolettethiro/git/test/src/fonts/siller.otf') format('truetype');
+  }
+
+.glitch {
+    font-size: 4rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+    text-shadow: 0.05em 0 0 rgba(200, 0, 255, 0.75),
+      -0.025em -0.05em 0 rgba(149, 12, 195, 0.75),
+      0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+  
+    animation: glitch 500ms infinite;
+}
+  
+  .glitch span {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  
+  .glitch span:first-child {
+    animation: glitch 650ms infinite;
+    clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+    transform: translate(-0.025em, -0.0125em);
+    /* color: green; */
+    opacity: 0.8;
+  }
+  
+  .glitch span:last-child {
+    animation: glitch 375ms infinite;
+    clip-path: polygon(0 80%, 100% 20%, 100% 100%, 0 100%);
+    transform: translate(0.0125em, 0.025em);
+    /* color: red; */
+    opacity: 0.8;
+  }
+  
+  @keyframes glitch {
+    0% {
+      text-shadow: 0.05em 0 0 rgba(200, 0, 255, 0.75),
+        -0.05em -0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.025em 0.05em 0 rgba(102, 0, 255, 0.75);
+    }
+    14% {
+      text-shadow: 0.05em 0 0 rgba(200, 0, 255, 0.75),
+        -0.05em -0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    15% {
+      text-shadow: -0.05em -0.025em 0 rgba(200, 0, 255, 0.75),
+        0.025em 0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.05em -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    49% {
+      text-shadow: -0.05em -0.025em 0 rgba(200, 0, 255, 0.75),
+        0.025em 0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.05em -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    50% {
+      text-shadow: 0.025em 0.05em 0 rgba(200, 0, 255, 0.75),
+        0.05em 0 0 rgba(149, 12, 195, 0.75), 0 -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    99% {
+      text-shadow: 0.025em 0.05em 0 rgba(200, 0, 255, 0.75),
+        0.05em 0 0 rgba(149, 12, 195, 0.75), 0 -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    100% {
+      text-shadow: -0.025em 0 0 rgba(200, 0, 255, 0.75),
+        -0.025em -0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.025em -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+  }
+  
+  @media (prefers-reduced-motion: reduce) {
+    *,
+    ::before,
+    ::after {
+      animation-delay: -1ms !important;
+      animation-duration: 1ms !important;
+      animation-iteration-count: 1 !important;
+      background-attachment: initial !important;
+      scroll-behavior: auto !important;
+      transition-duration: 0s !important;
+      transition-delay: 0s !important;
+    }
   }
