--- a/src/Styles.css
+++ b/src/Styles.css
@@ -21,4 +21,23 @@
     }
   }
 
-
+body {
+    background: #222;
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+    color: white;
+    font-family: sans-serif;
+  }
+  
+.glitch {
+  font-size: 8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  position: relative;
+  
+  text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
+    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
+    0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+    animation: glitch 500ms infinite;
+  }
