--- a/src/Gamepage.css
+++ b/src/Gamepage.css
@@ -314,7 +314,7 @@ body {
 
 @font-face {
     font-family: 'ButtonFont';
-    src: url('/Users/nicolettethiro/git/test/src/fonts/siller.otf') format('truetype');
+    src: url('./fonts/siller.otf') format('truetype');
   }
   
 
