--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,10 @@
 }
 
 .Auth-form {
-  width: 420px;
+  width: 430px;
+  height: 400px;
   box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
   padding-top: 30px;
-  padding-bottom: 20px;
   border-radius: 8px;
   background-color: #F0F8FF;
 }
@@ -40,16 +40,6 @@ label {
   color: rgb(34, 34, 34);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   min-height: 100vh;
@@ -73,50 +63,17 @@ label {
   src: url('./fonts/siller.otf') format('truetype');
 }
 
-.letter {
-  display: inline-block;
-  animation-name: lexicrush;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  font-family: 'retro-gaming-font', sans-serif;
-}
-
-@keyframes lexicrush {
-  0% { transform: translateY(0); }
-  50% { transform: translateY(-10px); }
-  100% { transform: translateY(0); }
-}
-
-.l { animation-delay: 0s; }
-.e { animation-delay: 0.1s; }
-.x { animation-delay: 0.2s; }
-.i { animation-delay: 0.3s; }
-.c { animation-delay: 0.4s; }
-.r { animation-delay: 0.5s; }
-.u { animation-delay: 0.6s; }
-.s { animation-delay: 0.7s; }
-.h { animation-delay: 0.8s; }
-
-.random-letter {
-  position: absolute;
-  color: black;
-  font-size: 0.5em;
-  font-weight: bold;
-  font-family: Arial, sans-serif;
-  margin-top: -100px;
-}
-
-img {
-  display: block;
-  margin: 0 auto;
-  max-width: 40%;
-  margin-top: -175px;
-}
 
 .button-container {
   margin-top: 40px;
 }
+
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #361640;
+}
+
 
 
 
