--- a/src/Start.css
+++ b/src/Start.css
@@ -14,21 +14,22 @@ body {
 	transform: translate(-50%, -50%) scale(1, 1);
 }
 
-.rounded-button { 
-    border-radius: 50px;
-    background-color: #29103e;
-    color: #fff;
-    padding: 20px 30px;
-    cursor: pointer;
-    border: none;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    
+
+.play-button {
+  border-radius: 50px;
+  background-color: #29103e;
+  color: #fff;
+  padding: 10px 20px;
+  cursor: pointer;
+  border: none;
+  position: absolute;
+  left: 50%;
+  top: 55%;
+  transform: translate(-50%, 0%);
+
 }
 
-.rounded-button:hover {
+.play-button:hover {
     background-color: #fff;
     color: #29103e;
 }
@@ -38,13 +39,13 @@ body {
   }
 
 .glitch {
-    font-size: 4rem;
+    font-size: 1.7rem;
     font-weight: 700;
     text-transform: uppercase;
     position: relative;
-    text-shadow: 0.05em 0 0 rgba(200, 0, 255, 0.75),
-      -0.025em -0.05em 0 rgba(149, 12, 195, 0.75),
-      0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+    text-shadow: 0.8px 0 0 rgba(200, 0, 255, 0.75),
+      -0.2px -0.8px 0 rgba(149, 12, 195, 0.75),
+      0.2px 0.8px 0 rgba(0, 0, 255, 0.75);
   
     animation: glitch 500ms infinite;
 }
@@ -58,7 +59,7 @@ body {
   .glitch span:first-child {
     animation: glitch 650ms infinite;
     clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
-    transform: translate(-0.025em, -0.0125em);
+    transform: translate(-0.2px, -0.125px);
     /* color: green; */
     opacity: 0.8;
   }
@@ -120,3 +121,209 @@ body {
       transition-delay: 0s !important;
     }
   }
+
+
+  .c {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    position: fixed;
+  }
+  
+  .bg {
+    border-radius: 50%;
+    box-shadow: 0px 0px 100px 50px rgba(147, 141, 141, 0);
+    height: 400px;
+    margin: 0 auto;
+    overflow: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+  }
+  
+  .light {
+    border-color: transparent transparent #FFFFFF transparent;
+    border-style: solid;
+    border-width: 0 160px 400px 160px;
+    height: 0;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 0;
+  }
+  
+  .ufo {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
+    
+    .ufo .ufo-bottom {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgb(255, 255, 255);
+    border-radius: 50%;
+    height: 20px;
+    top: 55px;
+    width: 20px;
+    }
+    
+    .ufo .ufo-bottom:after,
+    .ufo .ufo-bottom:before {
+    position: absolute;
+    background: rgb(242, 240, 243);
+    border-radius: 50%;
+    content: "";
+    height: 20px;
+    top: -6px;
+    width: 20px;
+    }
+    
+    .ufo .ufo-bottom:after {
+    left: -25px;
+    }
+    
+    .ufo .ufo-bottom:before {
+    left: 25px;
+    }
+    
+    .ufo .ufo-top {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background:rgb(61, 25, 111);
+    border-radius: 50%;
+    height: 70px;
+    width: 90px;
+    }
+    
+    .ufo .ufo-top:before {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgb(102, 31, 143);
+    border-radius: 50%;
+    content: "";
+    height: 70px;
+    top: -10px;
+    width: 100px;
+    }
+    
+    .ufo .ufo-glass {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(255, 255, 255, 1);
+    border-radius: 90px 90px 80px 80px;
+    height: 80px;
+    overflow: hidden;
+    top: -40px;
+    width: 80px;
+    }
+    
+    .ufo .ufo-glass .alien {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 128, 0, 1);
+    border-radius: 50px 50px 0 0;
+    height: 70px;
+    overflow: hidden;
+    top: 25px;
+    width: 50px;
+    }
+    
+    .ufo .ufo-glass .alien .alien-eye {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(255, 255, 255, 1);
+    border-radius: 50%;
+    height: 30px;
+    top: 10px;
+    width: 30px;
+    }
+    
+    .ufo .ufo-glass .alien .alien-eye:before {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 1);
+    border-radius: 50%;
+    content: "";
+    height: 10px;
+    bottom: 5px;
+    width: 10px;
+    }
+    
+    .ufo .ufo-glass .alien .alien-eye:after {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 128, 0, 1);
+    border-radius: 50%;
+    content: "";
+    height: 40px;
+    bottom: 30px;
+    width: 40px;
+    }
+    
+    .ufo {
+      animation: top-anima 1.5s infinite linear;
+    }
+    
+   .login-button {
+      border-radius:40px;
+      background-color: #29103e;
+      color: #fff;
+      padding: 10px 30px;
+      cursor: pointer;
+      border: none;
+      transform: translateX(55px) translateY(60px);
+  }
+  .sign-up-button {
+    border-radius:40px;
+    background-color: #29103e;
+    color: #fff;
+    padding: 10px 30px;
+    cursor: pointer;
+    border: none;
+    transform: translateX(-45px) translateY(100px);
+  } 
+  
+
+  
+    @keyframes light-anima {
+      0% {
+        opacity: 0;
+      }
+      45% {
+        opacity: 0.2;
+      }
+      52% {
+        opacity: 0.2;
+      }
+      55% {
+        opacity: 0;
+      }
+      60% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+    
+    .bg .light {
+      animation: light-anima 50s infinite linear;
+    }
+    
