--- a/src/Auth.css
+++ b/src/Auth.css
@@ -27,7 +27,8 @@ label{
 	cursor: pointer;
 	transition: .5s ease-in-out;
 }
-input{
+
+.my-input{
 	width: 60%;
 	height: 20px;
 	background: #e0dede;
