--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   font-family: Abel, Arial, Verdana, sans-serif;
 }
 
@@ -12,9 +13,9 @@ html, body {
 .card {
   width: 450px;
   height: 300px;
-  background-color: #fff;
-  background: linear-gradient(#f8f8f8, #fff);
-  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.4);
+  background-color: rgb(255, 255, 255);
+  /* background: linear-gradient(#f8f8f8, #fff); */
+  box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);
   border-radius: 6px;
   overflow: hidden;
   position: relative;
@@ -37,7 +38,6 @@ html, body {
 }
 
 
-
 .card:hover .additional {
   width: 100%;
   border-radius: 0 5px 5px 0;
@@ -57,7 +57,7 @@ html, body {
   top: 10%;
   right: -2px;
   height: 80%;
-  border-left: 2px solid rgba(0,0,0,0.025);
+  border-left: 2px solid rgba(0, 0, 0, 0.025);
 }
 
 .card .additional .user-card .level,
@@ -67,7 +67,7 @@ html, body {
   text-transform: uppercase;
   font-size: 0.75em;
   font-weight: bold;
-  background: rgba(0,0,0,0.15);
+  background: rgba(0, 0, 0, 0.15);
   padding: 0.125rem 0.75rem;
   border-radius: 100px;
   white-space: nowrap;
@@ -92,6 +92,11 @@ html, body {
 .card .additional .more-info h1 {
   color: #fff;
   margin-bottom: 0;
+  font-size: 1.25em /* User Handle inside the more info card*/
+}
+
+.general h1 {
+  font-size: 1.25em; /* User Handle before hovering over the more info card*/
 }
 
 .card .additional .coords {
@@ -101,7 +106,7 @@ html, body {
 }
 
 
-.card .additional .coords span + span {
+.card .additional .coords span+span {
   float: right;
 }
 
@@ -118,7 +123,7 @@ html, body {
 
 
 
-.card .additional .stats > div {
+.card .additional .stats>div {
   flex: 1;
   text-align: center;
 }
@@ -175,41 +180,38 @@ html, body {
   transform: translate(-350%, 15%);
   z-index: 2;
 }
-  
+
 .a .a-eye {
-    left: 50%;
-    position: absolute;
-    transform: translateX(-50%);
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 50%;
-    height: 30px;
-    top: 10px;
-    width: 30px;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 50%;
+  height: 30px;
+  top: 10px;
+  width: 30px;
 }
-  
+
 .a .a-eye:after {
-    left: 50%;
-    position: absolute;
-    transform: translateX(-50%);
-    background-color: rgba(0, 128, 0, 1);
-    border-radius: 50%;
-    content: "";
-    height: 40px;
-    bottom: 30px;
-    width: 40px;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  background-color: rgba(0, 128, 0, 1);
+  border-radius: 50%;
+  content: "";
+  height: 40px;
+  bottom: 30px;
+  width: 40px;
 }
-  
+
 .a-eye:before {
-    left: 50%;
-    position: absolute;
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 1);
-    border-radius: 50%;
-    content: "";
-    height: 10px;
-    bottom: 5px;
-    width: 10px;
-} 
-
-
-
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 1);
+  border-radius: 50%;
+  content: "";
+  height: 10px;
+  bottom: 5px;
+  width: 10px;
+}
