clear text box each time enter is pressed

--- a/src/Longest.css
+++ b/src/Longest.css
@@ -506,3 +506,15 @@ input {
   background-color: #fff;
   color: #29103e;
 }
+
+.round-container {
+  position: absolute;
+  top: 40%;
+  left: 465%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+  font-weight: bold;
+  color: #ffffff;
+  white-space: nowrap;
+
+}
