--- a/src/Start.css
+++ b/src/Start.css
@@ -39,7 +39,7 @@ body {
   }
 
 .glitch {
-    font-size: 3.7rem;
+    font-size: 2.4rem;
     font-weight: 700;
     text-transform: uppercase;
     position: relative;
@@ -140,7 +140,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1.4);
     width: 400px;
   }
   
@@ -161,7 +161,7 @@ body {
     position: absolute;
     height: 100px;
     width: 100px;
-    top: 35%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
     }
@@ -238,7 +238,7 @@ body {
     border-radius: 50px 50px 0 0;
     height: 70px;
     overflow: hidden;
-    top: 25px;
+    top: 22px;
     width: 50px;
     }
     
@@ -324,6 +324,6 @@ body {
     }
     
     .bg .light {
-      animation: light-anima 10s infinite linear;
+      animation: light-anima 20s infinite linear;
     }
     
