--- a/src/Start.css
+++ b/src/Start.css
@@ -150,7 +150,7 @@ body {
     border-width: 0 160px 400px 160px;
     height: 0;
     opacity: 0;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -158,10 +158,10 @@ body {
   }
   
   .ufo {
-    position: absolute;
+    position: relative;
     height: 100px;
     width: 100px;
-    top: 20%;
+    top: -20%;
     left: 50%;
     transform: translate(-50%, -50%);
     }
