--- a/src/Gameover.css
+++ b/src/Gameover.css
@@ -301,10 +301,10 @@
     border-radius: 50px;
     background-color: #29103e;
     color: #fff;
-    padding: 10px 30px;
+    padding: 10px 25px;
     cursor: pointer;
     border: none;
-    transform: translateX(48px) translateY(30px);
+    transform: translateX(-120px) translateY(200px);
 }
 
 .rounded:hover {
@@ -320,7 +320,7 @@
     padding: 10px 20px;
     cursor: pointer;
     border: none;
-    transform: translateX(-40px) translateY(60px);
+    transform: translateX(-240px) translateY(150px);
 }
 
 .profile-button:hover {
@@ -335,3 +335,86 @@
   }
   
 
+  .glitch-game-over {
+    font-size: 4rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+    text-shadow: 0.8px 0 0 rgba(200, 0, 255, 0.75),
+      -0.2px -0.8px 0 rgba(149, 12, 195, 0.75),
+      0.2px 0.8px 0 rgba(0, 0, 255, 0.75);
+  
+    animation: glitch-game-over 800ms infinite;
+}
+
+  .glitch-game-over span {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  
+  .glitch-game-over span:first-child {
+    animation: glitch-game-over 650ms infinite;
+    clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+    transform: translate(-0.2px, -0.125px);
+    /* color: green; */
+    opacity: 0.8;
+  }
+  
+  .glitch-game-over span:last-child {
+    animation: glitch-game-over 375ms infinite;
+    clip-path: polygon(0 80%, 100% 20%, 100% 100%, 0 100%);
+    transform: translate(0.0125em, 0.025em);
+    /* color: red; */
+    opacity: 0.8;
+  }
+  
+  @keyframes glitch-game-over {
+    0% {
+      text-shadow: 0.05em 0 0 rgba(200, 0, 255, 0.75),
+        -0.05em -0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.025em 0.05em 0 rgba(102, 0, 255, 0.75);
+    }
+    14% {
+      text-shadow: 0.05em 0 0 rgba(200, 0, 255, 0.75),
+        -0.05em -0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    15% {
+      text-shadow: -0.05em -0.025em 0 rgba(200, 0, 255, 0.75),
+        0.025em 0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.05em -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    49% {
+      text-shadow: -0.05em -0.025em 0 rgba(200, 0, 255, 0.75),
+        0.025em 0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.05em -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    50% {
+      text-shadow: 0.025em 0.05em 0 rgba(200, 0, 255, 0.75),
+        0.05em 0 0 rgba(149, 12, 195, 0.75), 0 -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    99% {
+      text-shadow: 0.025em 0.05em 0 rgba(200, 0, 255, 0.75),
+        0.05em 0 0 rgba(149, 12, 195, 0.75), 0 -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+    100% {
+      text-shadow: -0.025em 0 0 rgba(200, 0, 255, 0.75),
+        -0.025em -0.025em 0 rgba(149, 12, 195, 0.75),
+        -0.025em -0.05em 0 rgba(0, 0, 255, 0.75);
+    }
+  }
+  
+  @media (prefers-reduced-motion: reduce) {
+    *,
+    ::before,
+    ::after {
+      animation-delay: -1ms !important;
+      animation-duration: 1ms !important;
+      animation-iteration-count: 1 !important;
+      background-attachment: initial !important;
+      scroll-behavior: auto !important;
+      transition-duration: 0s !important;
+      transition-delay: 0s !important;
+    }
+  }
