--- a/src/Test.css
+++ b/src/Test.css
@@ -50,8 +50,8 @@ h1 span:last-child {
    */
 
 
-.glitch-game-over {
-    font-size: 8rem;
+/* .glitch-game-over {
+    font-size: 4rem;
     font-weight: 700;
     text-transform: uppercase;
     position: relative;
@@ -73,7 +73,7 @@ h1 span:last-child {
     clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
     transform: translate(-0.2px, -0.125px);
     /* color: green; */
-    opacity: 0.8;
+    /* opacity: 0.8;
   }
   
   .glitch-game-over span:last-child {
@@ -81,9 +81,7 @@ h1 span:last-child {
     clip-path: polygon(0 80%, 100% 20%, 100% 100%, 0 100%);
     transform: translate(0.0125em, 0.025em);
     /* color: red; */
-    opacity: 0.8;
-  }
-  
+/* 
   @keyframes glitch-game-over {
     0% {
       text-shadow: 0.05em 0 0 rgba(200, 0, 255, 0.75),
@@ -168,7 +166,7 @@ h1 span:last-child {
   .again-button:hover {
     background-color: #fff;
     color: #29103e;
-}
-  
+} 
+   */
 
 
